...
                        } else {
                            Text(" ")
                                .foregroundColor(.rougeSombreErreur)
                                .font(customFont(style: .caption))
                                .disabled(true)
                        }
                        TextField("Votre email", text: $userMail)
                            .font(customFont(style: .body))
                            .textFieldStyle(RoundedBorderTextFieldStyle())
                            .autocapitalization(.none)
                            .disableAutocorrection(true)
                            .keyboardType(.emailAddress)
                    }
                    // Champ sécurisé pour le mot de passe
                    SecureField("Mot de passe", text: $password)
                        .font(customFont(style: .body))
                        .textFieldStyle(RoundedBorderTextFieldStyle())
                        
                    //    .padding(.horizontal)
                    Spacer()
                    // Case à cocher "Se souvenir de moi"
                    HStack {
                        Toggle(isOn: $dataController.rememberMe) {
                            Text("Se souvenir de moi")
                                .font(customFont(style: .body))
                        }
                        .toggleStyle(.switch) // Utilisation d'un style de case à cocher
                        .accessibilityIdentifier("RememberMeToggle")
                    }
                    Spacer()
                    // Bouton de connexion
                    Button( action: {
                        login()
                    }) {
                        Text("Se connecter")
                            .font(customFont(style: .title3))
                            .padding()
                            .frame(maxWidth: .infinity)
                            .background(.doréAccentuation)
                            .foregroundColor(.white)
                            .cornerRadius(8)
...
                    // Lien pour "Mot de passe oublié"
                    HStack {
                        Spacer()
                        Button(action: {
                            isShowingAlert = true
                        }) {
                            Text("Mot de passe oublié ?")
                                .font(customFont(style: .body))
                                .foregroundColor( isValidEmail(userMail) ? .doréAccentuation : .gray)
                                
                        }
                        .disabled(!isValidEmail(userMail))
                    }
...
        .frame(maxWidth: .infinity, maxHeight: .infinity)
        .ignoresSafeArea()
        .background(.blancCasseSecondaire)
        .overlay(
            Group {
                if isLoading {
                    ProgressView("Connexion en cours...")
                        .progressViewStyle(CircularProgressViewStyle())
                        .frame(maxWidth: .infinity, maxHeight: .infinity)
                        .background(Color.black.opacity(0.4))
                }
            }
        )
...
