...
                    // Mode paysage
                    VStack {
                        HStack {
                            Giffy("camera-cinephoria2")
                                .frame( width: 200, height: 75)
                            Spacer()
                            Text("Mes réservations")
                                .font(customFont(style: .largeTitle))
                                .multilineTextAlignment(.leading)
                            Spacer()
                            Text(dataController.reservations[0].displayName)
                                .font(customFont(style: .body))
                            Spacer()
                            Button(action: {
                                isShowingAlert = true
                            }){
                                Image(systemName: "power")
                                    .foregroundColor( .doréAccentuation)
                            }
                        }
                        .padding(.horizontal, 10)
                        
                    }
...
                        .padding(.trailing, 10)
                        .onTapGesture {
                            DispatchQueue.main.async {
                                viewModel.isFilmViewShowing = true
                            }
                        }
                        .accessibilityIdentifier("ReservationImage")
                    
                    // Spacer()
                    VStack(alignment: .leading, spacing: 10) {
                        if colorScheme == .dark {
                            Text(reservation.titleFilm)
                                .font(customFont(style: .title))
                                .bold()
                                .foregroundColor(.white)
                                .accessibilityIdentifier("ReservationTitle")
                        } else {
                            Text(reservation.titleFilm)
                                .font(customFont(style: .title))
                                .bold()
                                .foregroundColor(.bleuNuitPrimaire)
                                .accessibilityIdentifier("ReservationTitle")
                        }
                        
                        
                        HStack (spacing: 40){
                            
                            SeanceView(reservation: dataController.reservations[reservationIndex])
                                .onTapGesture {
                                    DispatchQueue.main.async {
                                        viewModel.isSeatsViewShowing = true
                                    }
                                }
                                .accessibilityIdentifier("SeanceView")
                            
                            ActionsView(reservation: reservation, qrCodeImage: $qrCodeImage)
                                .onTapGesture {
                                    DispatchQueue.main.async {
                                        switch reservation.stateReservation {
                                        case .ReserveConfirmed:
                                            viewModel.isQRCodeViewShowing = true
                                        case .DoneUnevaluated:
...
