...
    var totalSeats: Int { reservation.seatsForReservation!.reduce(0) { $0 + $1.numberSeats } }
    
    @Environment(\.dismiss) private var dismiss
    
    var body: some View {
        VStack(alignment: .leading, spacing: 30) {
            Text("Votre réservation")
                .font(customFont(style: .title))
                
                .padding(.bottom, 10)
                .padding(.top, 100)
            if reservation.numberPMR > 1 {
                
...
            // Montant total
            HStack {
                Spacer()
                Text("\(totalPrice, specifier: "%.2f") €")
                    .font(customFont(style: .title2))
                    .bold()
                    .accessibilityIdentifier("TotalPrice")
            }
        }
        .padding(EdgeInsets(top: 10, leading: 20, bottom: 0, trailing: 20))
        Spacer()
        HStack {
            Button(action: { dismiss() } ) {
                Label("Valider", systemImage: "checkmark")
                    .padding(10)
                    .font(customFont(style: .title))
            }
            
            .buttonStyle(.bordered)
            .buttonBorderShape(.circle)
...
